WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179464
AVSampleBufferGenerator leaks seen on leaks bot
https://bugs.webkit.org/show_bug.cgi?id=179464
Summary
AVSampleBufferGenerator leaks seen on leaks bot
Joseph Pecoraro
Reported
2017-11-08 20:03:33 PST
AVSampleBufferGenerator leaks seen on leaks bot
> Leak: 0x7fdf4f187bc0 size=16 zone: DefaultMallocZone_0x10803d000 AVSampleBufferGenerator ObjC AVFoundation > 0xa60e7731 0x001dffff 0x4f1a71e0 0x00007fdf 1w.......q.O.... > Call stack: [thread 0x7fffad1d0340]: > | 0x2 > | start > | DumpRenderTreeMain(int, char const**) DumpRenderTree.mm:1407 > | dumpRenderTree(int, char const**) DumpRenderTree.mm:1291 > | runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) DumpRenderTree.mm:2027 > | CFRunLoopRunSpecific > | __CFRunLoopRun > | __CFRunLoopDoSources0 > | __CFRunLoopDoSource0 > | __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ > | __NSThreadPerformPerform > | WTF::dispatchFunctionsFromMainThread() MainThread.cpp:132 > | WTF::Function<void ()>::CallableWrapper<-[WebCoreResourceHandleAsOperationQueueDelegate connectionDidFinishLoading:]::$_7>::call() WebCoreResourceHandleAsOperationQueueDelegate.mm:0 > | WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*) ResourceLoader.cpp:684 > | WebCore::SubresourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) SubresourceLoader.cpp:577 > | WebCore::CachedImage::finishLoading(WebCore::SharedBuffer*) CachedImage.cpp:463 > | WebCore::ImageSource::dataChanged(WebCore::SharedBuffer*, bool) ImageSource.cpp:118 > | WebCore::ImageDecoderAVFObjC::setData(WebCore::SharedBuffer&, bool) ImageDecoderAVFObjC.mm:636 > | WebCore::ImageDecoderAVFObjC::readSampleMetadata() ImageDecoderAVFObjC.mm:352 > | _objc_rootAlloc > | class_createInstance > | calloc > | malloc_zone_calloc
Attachments
[PATCH] Proposed Fix
(2.07 KB, patch)
2017-11-08 20:05 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-11-08 20:05:28 PST
Created
attachment 326422
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2017-11-08 23:59:35 PST
Comment on
attachment 326422
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 326422 Committed
r224620
: <
https://trac.webkit.org/changeset/224620
>
WebKit Commit Bot
Comment 3
2017-11-08 23:59:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 09:44:54 PST
<
rdar://problem/35562353
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug