AVSampleBufferGenerator leaks seen on leaks bot https://bugs.webkit.org/show_bug.cgi?id=179464

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-08
Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
(WebCore::ImageDecoderAVFObjC::readSampleMetadata):
(WebCore::ImageDecoderAVFObjC::createFrameImageAtIndex):
Adopt the allocation into our RetainPtr.

Canonical link: https://commits.webkit.org/195519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224620 268f45cc-cd09-0410-ab3c-d52691b4dbfc